DevTools: Rename WebInspector.DOMAgent into WebInspector.DOMModel
BUG=

Review URL: https://codereview.chromium.org/206313004

git-svn-id: svn://svn.chromium.org/blink/trunk@169928 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/http/tests/inspector/modify-cross-domain-rule.html
+++ b/LayoutTests/http/tests/inspector/modify-cross-domain-rule.html
@@ -20,7 +20,7 @@ function test()
 
             function selectCallback()
             {
-                var idToDOMNode = WebInspector.domAgent._idToDOMNode;
+                var idToDOMNode = WebInspector.domModel._idToDOMNode;
                 for (var id in idToDOMNode) {
                     node = idToDOMNode[id];
                     if (node.getAttribute && node.getAttribute("id") === "inspected") {
