--- a/LayoutTests/inspector/elements/inspect-mode-shadow-text.html
+++ b/LayoutTests/inspector/elements/inspect-mode-shadow-text.html
@@ -19,7 +19,7 @@ function click()
 
 function test()
 {
-    WebInspector.domAgent.setInspectModeEnabled(true, false, step2);
+    WebInspector.domModel.setInspectModeEnabled(true, false, step2);
 
     function step2()
     {
