--- a/LayoutTests/inspector/elements/node-xpath.xhtml
+++ b/LayoutTests/inspector/elements/node-xpath.xhtml
@@ -28,7 +28,7 @@ function test()
 
     function getDocumentElement()
     {
-        var map = WebInspector.domAgent._idToDOMNode;
+        var map = WebInspector.domModel._idToDOMNode;
         for (var id in map) {
             if (map[id].nodeName() === "#document")
                 return map[id];
