--- a/LayoutTests/inspector/elements/styles/undo-add-rule-crash.html
+++ b/LayoutTests/inspector/elements/styles/undo-add-rule-crash.html
@@ -15,7 +15,7 @@ function test()
 
     function step2()
     {
-        WebInspector.domAgent.undo();
+        WebInspector.domModel.undo();
         InspectorTest.waitForStyles("other", step3);
     }
 
