--- a/LayoutTests/inspector/elements/dom-agent-query-selector.html
+++ b/LayoutTests/inspector/elements/dom-agent-query-selector.html
@@ -52,7 +52,7 @@ function test()
             if (!nodeIds[i])
                 InspectorTest.addResult("no results");
             else {
-                var node = WebInspector.domAgent.nodeForId(nodeIds[i]);
+                var node = WebInspector.domModel.nodeForId(nodeIds[i]);
                 InspectorTest.addResult("node id: " + node.getAttribute("id"));
             }
         }
