--- a/LayoutTests/inspector/elements/elements-panel-rewrite-href.html
+++ b/LayoutTests/inspector/elements/elements-panel-rewrite-href.html
@@ -13,7 +13,7 @@ function test()
 
     function step1()
     {
-        var innerMapping = WebInspector.domAgent._idToDOMNode;
+        var innerMapping = WebInspector.domModel._idToDOMNode;
 
         for (var nodeId in innerMapping) {
             var node = innerMapping[nodeId];
