--- a/LayoutTests/inspector/elements/inspect-pseudo-element.html
+++ b/LayoutTests/inspector/elements/inspect-pseudo-element.html
@@ -17,7 +17,7 @@ function clickPseudo()
 function test()
 {
     WebInspector.inspectorView.showPanel("elements");
-    WebInspector.domAgent.setInspectModeEnabled(true, false, inspectModeEnabled.bind(this));
+    WebInspector.domModel.setInspectModeEnabled(true, false, inspectModeEnabled.bind(this));
 
     function inspectModeEnabled()
     {
