--- a/LayoutTests/inspector/elements/styles/pseudo-elements.html
+++ b/LayoutTests/inspector/elements/styles/pseudo-elements.html
@@ -143,32 +143,32 @@ function test()
 
         function removeAfter(next)
         {
-            executeAndDumpTree("removeLastRule()", WebInspector.DOMAgent.Events.NodeRemoved, next);
+            executeAndDumpTree("removeLastRule()", WebInspector.DOMModel.Events.NodeRemoved, next);
         },
 
         function removeBefore(next)
         {
-            executeAndDumpTree("removeLastRule()", WebInspector.DOMAgent.Events.NodeRemoved, next);
+            executeAndDumpTree("removeLastRule()", WebInspector.DOMModel.Events.NodeRemoved, next);
         },
 
         function addAfter(next)
         {
-            executeAndDumpTree("addAfterRule()", WebInspector.DOMAgent.Events.NodeInserted, next);
+            executeAndDumpTree("addAfterRule()", WebInspector.DOMModel.Events.NodeInserted, next);
         },
 
         function addBefore(next)
         {
-            executeAndDumpTree("addBeforeRule()", WebInspector.DOMAgent.Events.NodeInserted, next);
+            executeAndDumpTree("addBeforeRule()", WebInspector.DOMModel.Events.NodeInserted, next);
         },
 
         function modifyTextContent(next)
         {
-            executeAndDumpTree("modifyTextContent()", WebInspector.DOMAgent.Events.NodeInserted, next);
+            executeAndDumpTree("modifyTextContent()", WebInspector.DOMModel.Events.NodeInserted, next);
         },
 
         function clearTextContent(next)
         {
-            executeAndDumpTree("clearTextContent()", WebInspector.DOMAgent.Events.NodeRemoved, next);
+            executeAndDumpTree("clearTextContent()", WebInspector.DOMModel.Events.NodeRemoved, next);
         },
 
         function removeNodeAndCheckPseudoElementsUnbound(next)
@@ -176,11 +176,11 @@ function test()
             var inspectedBefore = inspectedNode.pseudoElements()["before"];
             var inspectedAfter = inspectedNode.pseudoElements()["after"];
 
-            executeAndDumpTree("removeNode()", WebInspector.DOMAgent.Events.NodeRemoved, callback);
+            executeAndDumpTree("removeNode()", WebInspector.DOMModel.Events.NodeRemoved, callback);
             function callback()
             {
-                InspectorTest.addResult("inspected:before DOMNode in DOMAgent: " + !!(WebInspector.domAgent.nodeForId(inspectedBefore.id)));
-                InspectorTest.addResult("inspected:after DOMNode in DOMAgent: " + !!(WebInspector.domAgent.nodeForId(inspectedAfter.id)));
+                InspectorTest.addResult("inspected:before DOMNode in DOMAgent: " + !!(WebInspector.domModel.nodeForId(inspectedBefore.id)));
+                InspectorTest.addResult("inspected:after DOMNode in DOMAgent: " + !!(WebInspector.domModel.nodeForId(inspectedAfter.id)));
                 next();
             }
         }
@@ -188,12 +188,12 @@ function test()
 
     function executeAndDumpTree(pageFunction, eventName, next)
     {
-        WebInspector.domAgent.addEventListener(eventName, domCallback, this);
+        WebInspector.domModel.addEventListener(eventName, domCallback, this);
         InspectorTest.evaluateInPage(pageFunction);
 
         function domCallback()
         {
-            WebInspector.domAgent.removeEventListener(eventName, domCallback, this);
+            WebInspector.domModel.removeEventListener(eventName, domCallback, this);
             WebInspector.inspectorView.panel("elements").treeOutline.addEventListener(WebInspector.ElementsTreeOutline.Events.ElementsTreeUpdated, treeCallback, this);
         }
 
