--- a/LayoutTests/inspector/elements/styles/style-update-during-selector-edit.html
+++ b/LayoutTests/inspector/elements/styles/style-update-during-selector-edit.html
@@ -33,7 +33,7 @@ function test()
     function step1()
     {
         InspectorTest.addSniffer(WebInspector.StylesSidebarPane.prototype, "_rebuildUpdate", rebuildUpdate);
-        WebInspector.domAgent.addEventListener(WebInspector.DOMAgent.Events.AttrModified, attributeChanged, this);
+        WebInspector.domModel.addEventListener(WebInspector.DOMModel.Events.AttrModified, attributeChanged, this);
         // Click "Add new rule".
         document.getElementById("add-style-button-test-id").click();
         InspectorTest.evaluateInPage("addStyleClass()", step2);
