--- a/LayoutTests/inspector/elements/styles/undo-change-property.html
+++ b/LayoutTests/inspector/elements/styles/undo-change-property.html
@@ -30,7 +30,7 @@ function test()
         InspectorTest.addResult("After changing property");
         InspectorTest.dumpSelectedElementStyles(true);
 
-        WebInspector.domAgent.undo();
+        WebInspector.domModel.undo();
         InspectorTest.selectNodeAndWaitForStyles("other", step3);
     }
 
@@ -39,7 +39,7 @@ function test()
         InspectorTest.addResult("After undo");
         InspectorTest.dumpSelectedElementStyles(true);
 
-        WebInspector.domAgent.redo();
+        WebInspector.domModel.redo();
         InspectorTest.selectNodeAndWaitForStyles("container", step4);
     }
 
