--- a/LayoutTests/inspector/elements/styles/undo-property-toggle.html
+++ b/LayoutTests/inspector/elements/styles/undo-property-toggle.html
@@ -24,7 +24,7 @@ function test()
         var treeItem = InspectorTest.getElementStylePropertyTreeItem("font-weight");
         InspectorTest.dumpStyleTreeItem(treeItem, "");
 
-        WebInspector.domAgent.undo();
+        WebInspector.domModel.undo();
         InspectorTest.waitForStyles("container", step3);
     }
 
@@ -34,7 +34,7 @@ function test()
         var treeItem = InspectorTest.getElementStylePropertyTreeItem("font-weight");
         InspectorTest.dumpStyleTreeItem(treeItem, "");
 
-        WebInspector.domAgent.redo();
+        WebInspector.domModel.redo();
         InspectorTest.waitForStyles("container", step4);
     }
 
