DevTools: rename SourceEditor to SourceView, make entire SourcesPanel a drop target.
R=vsevik@chromium.org

Review URL: https://codereview.chromium.org/211003002

git-svn-id: svn://svn.chromium.org/blink/trunk@169938 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/jump-to-previous-editing-location.html
+++ b/LayoutTests/inspector/jump-to-previous-editing-location.html
@@ -10,9 +10,9 @@ function test()
 {
     WebInspector.inspectorView.showPanel("sources");
     var panel = WebInspector.panels.sources;
-    var sourcesEditor = panel._sourcesEditor;
-    var historyManager = sourcesEditor._historyManager;
-    var editorContainer = sourcesEditor._editorContainer;
+    var sourcesView = panel._sourcesView;
+    var historyManager = sourcesView._historyManager;
+    var editorContainer = sourcesView._editorContainer;
 
     function rollback()
     {
