DevTools: Fix a bug in Array.remove
Review URL: https://codereview.chromium.org/199793022

git-svn-id: svn://svn.chromium.org/blink/trunk@169940 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/utilities.html
+++ b/LayoutTests/inspector/utilities.html
@@ -6,6 +6,28 @@
 function test()
 {
     InspectorTest.runTestSuite([
+        function remove(next)
+        {
+            var testArrays = [
+                [], [], [],
+                [1], [1], [1],
+                [1, 2, 3, 4, 5, 4, 3, 2, 1], [1, 3, 4, 5, 4, 3, 2, 1], [1, 3, 4, 5, 4, 3, 1],
+                [2, 2, 2, 2, 2], [2, 2, 2, 2], [],
+                [2, 2, 2, 1, 2, 2, 3, 2], [2, 2, 1, 2, 2, 3, 2], [1, 3]
+            ];
+            for (var i = 0; i < testArrays.length; i += 3) {
+                var actual = testArrays[i].slice(0);
+                var expected = testArrays[i + 1];
+                actual.remove(2, true);
+                InspectorTest.assertEquals(JSON.stringify(expected), JSON.stringify(actual), "remove(2, true) passed");
+                actual = testArrays[i].slice(0);
+                expected = testArrays[i + 2];
+                actual.remove(2, false);
+                InspectorTest.assertEquals(JSON.stringify(expected), JSON.stringify(actual), "remove(2, false) passed");
+            }
+            next();
+        },
+
         function orderedMergeIntersect(next)
         {
             function comparator(a, b)
