DevTools: Collect truncated scopes for async stacks.
For async stacks we will collect scopes up to the Local scope (i.e. no inner With or Catch scopes).
This is way more faster (about 2x), since inner scopes require script parsing and scope analyzing.

In the DevTools UI this is a small reduction, as any With object or exception can be evaluated on
async call frame in the console while paused, or looked via a popup on mouseover.

Speed gain: more than 2x.

BUG=340285
R=yurys, pfeldman

Review URL: https://codereview.chromium.org/209473013

git-svn-id: svn://svn.chromium.org/blink/trunk@169946 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/sources/debugger/async-callstack-scopes.html
+++ b/LayoutTests/inspector/sources/debugger/async-callstack-scopes.html
@@ -39,7 +39,7 @@ function timeout1()
         var localInInnerTimeout1 = "innerTimeout1";
         setTimeout(timeout2, Number(localInInnerTimeout1 + localInTimeout1) || 0);
     }
-    makeClosure(1, innerTimeout1)(100);
+    makeClosure(1, innerTimeout1, { foo: "bar1", __proto__: null })(100);
 }
 
 function timeout2()
@@ -50,7 +50,7 @@ function timeout2()
         var localInInnerTimeout2 = "innerTimeout2";
         debugger;
     }
-    makeClosure(2, innerTimeout2, { foo: "bar", __proto__: null })(200);
+    makeClosure(2, innerTimeout2, { foo: "bar2", __proto__: null })(200);
 }
 
 function test()
