DevTools: Remove event Console.messageRepeatCountUpdated
BUG=

Review URL: https://codereview.chromium.org/211023002

git-svn-id: svn://svn.chromium.org/blink/trunk@169953 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector-protocol/console/console-timestamp.html
+++ b/LayoutTests/inspector-protocol/console/console-timestamp.html
@@ -5,13 +5,6 @@
 
 function test()
 {
-    InspectorTest.assert = function(result, message)
-    {
-        if (!result) {
-            InspectorTest.log("FAIL: " + message);
-            InspectorTest.completeTest();
-        }
-    };
 
     var messages = [];
 
@@ -26,21 +19,11 @@ function test()
         InspectorTest.assert(payload.timestamp, "No timestamp found in message.");
 
         InspectorTest.assert(Math.abs(new Date().getTime() / 1000 - payload.timestamp) < 60, "Timestamp shouldn't differ very much from current time (one minute interval).");
-    }
-
-    function messageRepeatCountUpdated(data)
-    {
-        InspectorTest.assert(data.params.timestamp, "No timestamp found on repeat count update.");
-
-        var updatedTimestamp = data.params.timestamp;
-
-        InspectorTest.assert(updatedTimestamp >= messages[messages.length - 1].timestamp, "Timestamp shouldn't decrease over time.");
-
-        InspectorTest.completeTest();
+        if (messages.length === 3)
+            InspectorTest.completeTest();
     }
 
     InspectorTest.eventHandler["Console.messageAdded"] = messageAdded;
-    InspectorTest.eventHandler["Console.messageRepeatCountUpdated"] = messageRepeatCountUpdated;
     InspectorTest.sendCommand("Console.enable", {});
 
     InspectorTest.sendCommand("Runtime.evaluate", { expression: "console.log('testUnique'); for (var i = 0; i < 2; ++i) console.log('testDouble');" });
