[webcrypto] Add structured clone tests for RSA private keys.
BUG=245025

Review URL: https://codereview.chromium.org/210693002

git-svn-id: svn://svn.chromium.org/blink/trunk@169957 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/crypto/clone-rsaHashedKey-public.html
+++ b/LayoutTests/crypto/clone-rsaHashedKey-public.html
@@ -10,7 +10,7 @@
 <div id="console"></div>
 
 <script>
-description("Tests structured cloning of RSA keys (with a hash)");
+description("Tests structured cloning of RSA public keys (with a hash)");
 
 jsTestIsAsync = true;
 
