Rename /shadow-deep/ combinator to /deep/
Shadow DOM styling spec link:
http://drafts.csswg.org/css-scoping/#deep-combinator

BUG=348891
TEST=no new tests because just renaming.

Review URL: https://codereview.chromium.org/210813002

git-svn-id: svn://svn.chromium.org/blink/trunk@169960 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/css/invalidation/detach-reattach-shadow.html
+++ b/LayoutTests/fast/css/invalidation/detach-reattach-shadow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <script src="../../../resources/js-test.js"></script>
 <style>
-  body /shadow-deep/ .a { width: 100px; height: 100px; background-color: green; }
+  body /deep/ .a { width: 100px; height: 100px; background-color: green; }
 </style>
 <script>
     var inner;
