--- a/LayoutTests/fast/dom/shadow/querySelector-for-multiple-shadowroots.html
+++ b/LayoutTests/fast/dom/shadow/querySelector-for-multiple-shadowroots.html
@@ -25,7 +25,7 @@ document.body.appendChild(
 document.body.appendChild(
     createDOM('pre', {'id': 'console'}));
 
-description('crbug.com/337616: test for querySelectorAll with /shadow/ and /shadow-deep/');
+description('crbug.com/337616: test for querySelectorAll with /shadow/ and /deep/');
 
 var shadowRoot1 = getNodeInTreeOfTrees('foo-host/');
 var shadowRoot2 = getNodeInTreeOfTrees('foo-host//');
