--- a/LayoutTests/fast/dom/shadow/scrollbar.html
+++ b/LayoutTests/fast/dom/shadow/scrollbar.html
@@ -12,7 +12,7 @@
    width: 50px;
 }
 
-* /shadow-deep/ #div1 {
+* /deep/ #div1 {
    position: fixed;
    overflow: scroll;
    width: 80px;
@@ -20,7 +20,7 @@
    background-color: red;
 }
 
-* /shadow-deep/ #div1::-webkit-scrollbar {
+* /deep/ #div1::-webkit-scrollbar {
    width: 20px;
 }
 </style>
