--- a/LayoutTests/fast/css/invalidation/targeted-class-shadow-combinator.html
+++ b/LayoutTests/fast/css/invalidation/targeted-class-shadow-combinator.html
@@ -2,7 +2,7 @@
 <script src="../../../resources/js-test.js"></script>
 <style>
 .t1 #host1 /shadow/ .match { background-color: green; }
-.t2 /shadow-deep/ .match { background-color: green; }
+.t2 /deep/ .match { background-color: green; }
 </style>
 <div id="t1">
     <div id="host1"></div>
@@ -13,7 +13,7 @@
     <div></div>
 </div>
 <script>
-description("Check that targeted class invalidation works for /shadow/ and /shadow-deep/ combinators.");
+description("Check that targeted class invalidation works for /shadow/ and /deep/ combinators.");
 
 // Create shadow trees
 
