--- a/LayoutTests/fast/dom/shadow/querySelector-for-useragent-shadowroot.html
+++ b/LayoutTests/fast/dom/shadow/querySelector-for-useragent-shadowroot.html
@@ -15,22 +15,22 @@
   <pre id="console"></pre>
 </body>
 <script>
-description('crbug.com/337616: test for querySelectorAll with /shadow/ and /shadow-deep/');
+description('crbug.com/337616: test for querySelectorAll with /shadow/ and /deep/');
 
-shouldBe('document.querySelectorAll("form /shadow-deep/ *").length', '1');
-shouldBe('document.querySelectorAll("form /shadow-deep/ *")[0].id', '"input"');
+shouldBe('document.querySelectorAll("form /deep/ *").length', '1');
+shouldBe('document.querySelectorAll("form /deep/ *")[0].id', '"input"');
 shouldBe('document.querySelectorAll("form /shadow/ *").length', '0');
-shouldBe('document.querySelectorAll("input /shadow-deep/ *").length', '0');
+shouldBe('document.querySelectorAll("input /deep/ *").length', '0');
 shouldBe('document.querySelectorAll("input /shadow/ *").length', '0');
-shouldBe('document.querySelectorAll("details /shadow-deep/ *").length', '2');
-shouldBe('document.querySelectorAll("details /shadow-deep/ *")[0].id', '"summary"');
-shouldBe('document.querySelectorAll("details /shadow-deep/ *")[1].id', '"p"');
+shouldBe('document.querySelectorAll("details /deep/ *").length', '2');
+shouldBe('document.querySelectorAll("details /deep/ *")[0].id', '"summary"');
+shouldBe('document.querySelectorAll("details /deep/ *")[1].id', '"p"');
 shouldBe('document.querySelectorAll("details /shadow/ *").length', '0');
-shouldBe('document.querySelectorAll("summary /shadow-deep/ *").length', '0');
+shouldBe('document.querySelectorAll("summary /deep/ *").length', '0');
 shouldBe('document.querySelectorAll("summary /shadow/ *").length', '0');
-shouldBe('document.querySelectorAll("meter /shadow-deep/ *").length', '0');
+shouldBe('document.querySelectorAll("meter /deep/ *").length', '0');
 shouldBe('document.querySelectorAll("meter /shadow/ *").length', '0');
-shouldBe('document.querySelectorAll("progress /shadow-deep/ *").length', '0');
+shouldBe('document.querySelectorAll("progress /deep/ *").length', '0');
 shouldBe('document.querySelectorAll("progress /shadow/ *").length', '0');
 </script>
 </html>
