--- a/LayoutTests/fast/dom/shadow/shadow-dom-event-dispatching-distributed-to-younger.html
+++ b/LayoutTests/fast/dom/shadow/shadow-dom-event-dispatching-distributed-to-younger.html
@@ -5,7 +5,7 @@
     <script src="resources/shadow-dom.js"></script>
     <script src="resources/event-dispatching.js"></script>
     <style>
-      sandbox /shadow-deep/ div {
+      sandbox /deep/ div {
         padding-top: 20px;
         width: 40px;
       }
