--- a/LayoutTests/fast/dom/shadow/shadowdom-reprojection-1.html
+++ b/LayoutTests/fast/dom/shadow/shadowdom-reprojection-1.html
@@ -3,7 +3,7 @@
 <head>
 <script src="resources/shadow-dom.js"></script>
 <style>
-* /shadow-deep/ div {
+* /deep/ div {
   margin: 10px 10px 10px 10px;
   border: solid black;
 }
